Commented out ul.topNav flexbox for now as the drop downs don't line up correctly as they're all pixel aligned to the old li menus

--- a/components/sass/_core.scss
+++ b/components/sass/_core.scss
@@ -986,10 +986,10 @@ ul.topNav > li > a {
 }
 
 // progressive Flexbox for main menu
-ul.topNav {
-    display: flex;
-    justify-content: space-between;
-}
+// ul.topNav {
+//     display: flex;
+//     justify-content: space-between;
+// }
 // if needed, push items to far right, add an inline 'style="margin-left:auto;" '
 
 
